Fixed usages of deprecated Long constructor in test code
Components modified:
* camel-hazelcast
* camel-jira
* core/camel-management
* camel-micrometer
* camel-quartz
* camel-twitter